@@ -1,3 +1,7 @@
+2000-08-20  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* egg.cc,usecode.cc - Test'o Love somewhat works.
+
 2000-08-16  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Use center of barge as hot spot for moving.
